// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowMore component renders correctly 1`] = `
<div>
  <div>
    <div />
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-1 MuiButton-contained Button-contained-3 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-4"
      >
        Show more
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`ShowMore component renders correctly when trigger button is clicked 1`] = `
<div>
  <div>
    <div>
      Show more content
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-41 MuiButton-contained Button-contained-43 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-44"
      >
        Trigger
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`ShowMore component renders correctly with close button 1`] = `
<div>
  <div>
    <div>
      Show more content
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-61 MuiButton-contained Button-contained-63 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-64"
      >
        Close
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`ShowMore component renders correctly with close button is clicked 1`] = `
<div>
  <div>
    <div />
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-81 MuiButton-contained Button-contained-83 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-84"
      >
        Trigger
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`ShowMore component renders correctly with content expanded 1`] = `
<div>
  <div>
    <div>
      Show more content
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root Button-root-21 MuiButton-contained Button-contained-23 MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label Button-label-24"
      >
        Show more
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
